[package]
name = "unity-asset-core-v2"
version = "0.1.0"
edition = "2021"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Unity Asset Core V2 - 异步核心数据结构和traits"
license = "MIT"
keywords = ["unity", "assets", "core", "async", "tokio"]
categories = ["parsing", "game-development", "asynchronous"]

[dependencies]
# 异步运行时
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
pin-project = { workspace = true }
bytes = { workspace = true }

# 序列化和数据结构
serde = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 监控和追踪
tracing = { workspace = true }
tracing-futures = { workspace = true }

# 实用工具
once_cell = "1.19"
num_cpus = "1.16"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
futures-test = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.0"
tracing-test = "0.2"